--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -15,6 +16,8 @@ body {
   text-align: center;
   width: 50%;
   margin: 3rem auto 3rem auto;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 
@@ -40,6 +43,21 @@ body {
   font-size: 1.3rem;
   color: white;
   width: 60%;
+}
+
+.todo-container ::-webkit-input-placeholder {
+  color: white;
+  opacity: 0.7;
+}
+
+.todo-container :-ms-input-placeholder {
+  color: white;
+  opacity: 0.7;
+}
+
+.todo-container ::-ms-input-placeholder {
+  color: white;
+  opacity: 0.7;
 }
 
 .todo-container ::placeholder {
@@ -80,18 +98,41 @@ body {
   background: #252525;
 }
 
-@keyframes shake {
+@-webkit-keyframes shake {
   10%, 90% {
-    transform: translate3d(-1px, 0, 0);
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
   }
   20%, 80% {
-    transform: translate3d(1px, 0, 0);
+    -webkit-transform: translate3d(1px, 0, 0);
+            transform: translate3d(1px, 0, 0);
   }
   30%, 50%, 70% {
-    transform: translate3d(-1px, 0, 0);
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
   }
   40%, 60% {
-    transform: translate3d(1px, 0, 0);
+    -webkit-transform: translate3d(1px, 0, 0);
+            transform: translate3d(1px, 0, 0);
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+  }
+  20%, 80% {
+    -webkit-transform: translate3d(1px, 0, 0);
+            transform: translate3d(1px, 0, 0);
+  }
+  30%, 50%, 70% {
+    -webkit-transform: translate3d(-1px, 0, 0);
+            transform: translate3d(-1px, 0, 0);
+  }
+  40%, 60% {
+    -webkit-transform: translate3d(1px, 0, 0);
+            transform: translate3d(1px, 0, 0);
   }
 }
 
@@ -106,7 +147,8 @@ body {
   max-width: 100%;
   margin-bottom: 15px;
   border-radius: 5px;
-  animation: shake 0.6s;
+  -webkit-animation: shake 0.6s;
+          animation: shake 0.6s;
 }
 
 #todo li p {
@@ -130,18 +172,21 @@ body {
 }
 
 #todo li button:hover {
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   color: white;
 }
 
 .done {
   background-color: #af0404;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   color: white;
 }
 
 .undone {
   background-color: lightgreen;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
@@ -154,15 +199,29 @@ body {
   border: 3px solid white;
   border-radius: 5px;
   padding-bottom: 0.5rem;
-  animation: fadeIn 0.6s 1;
+  -webkit-animation: fadeIn 0.6s 1;
+          animation: fadeIn 0.6s 1;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  to {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
 }
 
 @keyframes fadeIn {
   from {
-    transform: scaleX(0);
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
   }
   to {
-    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
   }
 }
 
@@ -195,7 +254,6 @@ body {
   border: solid white;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
@@ -207,6 +265,7 @@ body {
   width: 27px;
   background-color: white;
   border-radius: 50%;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
@@ -245,3 +304,4 @@ body {
     width: 85%;
   }
 }
+/*# sourceMappingURL=style.css.map */
